Add Azure Web App deployment files - secure version
- Add deployment documentation without hardcoded secrets
- Add automated deployment scripts reading from local .env
- Add startup scripts for backend and frontend
- Add Procfile for both services
- Update Streamlit config for production
- All secrets managed via local .env file

--- a/frontend/.streamlit/config.toml
+++ b/frontend/.streamlit/config.toml
@@ -1,3 +1,12 @@
+[server]
+headless = true
+port = 8000
+enableCORS = false
+enableXsrfProtection = false
+
+[browser]
+gatherUsageStats = false
+
 [theme]
 base="dark"
 primaryColor="#4285F4" 
